# cryoet-protein-identification

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
configs/: convert_to_onnx.yaml  generate_masks.yaml  infer.yaml  train.yaml  vizualize_masks.yaml
cryoet-protein-identification/: .gitignore  commands.py  constants.py  convert_to_onnx.py  create_masks.py  dataset.py  eval_loss.py  generate_masks.py  infer.py  module_dataset.py  rotate_flip.py  threed_models.py  train.py  utils.py  vizualize_masks.py
kaggle/: .gitignore  input.dvc  kaggle.json  working.dvc
